[project]
name = "nzb"
version = "0.3.0"
description = "A spec compliant parser and meta editor for NZB files"
authors = [{ name = "Ravencentric", email = "me@ravencentric.cc" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["nzb", "usenet", "parser"]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = ["natsort>=8.4.0", "pydantic>=2.9.2", "xmltodict>=0.13.0"]

[project.urls]
Homepage = "https://nzb.ravencentric.cc"
Documentation = "https://nzb.ravencentric.cc"
Repository = "https://github.com/Ravencentric/nzb"

[tool.uv]
dev-dependencies = [
  "coverage>=7.6.1",
  "mkdocs-autorefs>=1.2.0",
  "mkdocs-material>=9.5.36",
  "mkdocstrings[python]>=0.26.1",
  "mypy>=1.11.2",
  "pytest>=8.3.3",
  "ruff>=0.6.7",
  "types-xmltodict>=0.13.0.3",
  "typing-extensions>=4.12.2",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.mypy]
strict = true
pretty = true
exclude = "tests/"

[tool.coverage.run]
omit = ["src/nzb/_version.py", "tests/*"]

[tool.coverage.report]
exclude_also = [
  "if TYPE_CHECKING:", # Only used for type-hints
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
